Fix cutoff site on view live

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,7 +83,7 @@ html, body, #root, .site, #page-container, .page, #elements {
  }
 
  #page-container:not(.editing) #elements {
-	 transform: translateY(-120px);
+	 transform: translateY(-50px);
 }
 
  .navbar {
